parser/tests/bad/ref04-2.st
% identifier '%s' has unsubscriptable type
%   run-time constant identifier

var i := 1
const j := i
const k := j[1]
